<resources>
    <string name="app_name">Universe</string>
    <string name="msg_load_default">Loading</string>
    <string name="login">Login</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="signup">SignUp</string>
    <string name="phoneno">Enter The Phone Number</string>
    <string name="today">For The Period Today</string>
    <string name="target">Target</string>
    <string name="questionaire">Compelted Questionaire(10)</string>
    <string name="questionairemenu">Questionnaire</string>
    <string name="retailersname">Retailers Name</string>
    <string name="mobile_no">Mobile No | Location | State \n| Completed date</string>
    <string name="workflow_mobile_no">Mobile No | Location | State \nSubmitted Date</string>
    <string name="status">Status</string>
    <string name="retailers">Retailor</string>
    <string name="enddate">Ends On 31 mar 2018</string>
    <string name="select">Select</string>
    <string name="disributors">Distributors</string>
    <string name="suverydetail">Survey Detail Report</string>
    <!--Navigation Drawer Menu -->
    <string name="username">UserName</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="filter">Filter</string>

    <!--Filter Items -->
    <string name="todayfilter">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="others">Others</string>
    <string name="periodfrom">Period From</string>
    <string name="periodto">Period To</string>
    <string name="reset">Reset</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="dashboard">DashBoard</string>
    <string name="survey_report">Survey Report</string>
    <string name="customers">Crystal Customers</string>
    <string name="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</string>
    <string name="pending"> 10 Pending</string>
    <string name="completed">Submitted</string>
    <string name="achiovement">  Achievement</string>
    <string name="inprogress">Inprogress</string>
    <string name="newretailors">New Retailers</string>
    <string name="crystalmembers">Crystal Memebers</string>
    <string name="newretailor">New Retailors</string>

    <string name="admin">Admin</string>
    <string name="master">Master</string>
    <string name="client">Client List</string>
    <string name="question">Questions</string>
    <string name="search_name">Search</string>
    <string name="survey">Surveys</string>
    <string name="category">Category</string>
    <string name="customer">Customer</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_msg">Deleted Successfully</string>
    <string name="cannot_delete">You cannot  delete this item</string>
    <string name="update_exit"><![CDATA[Update & Close]]></string>
    <string name="minimum_must">minimum must be</string>
    <string name="fill_required_fields">Please fill all required fields</string>
    <string name="save_add"><![CDATA[Save & Close]]></string>
    <string name="save_data_msg">Save Data Successfully</string>
    <string name="review_confirm_msg">Do you wants to save the data?</string>
    <string name="alert_clear_form">You have not saved any data.Do you wish to leave this screen?</string>
    <string name="date_format">dd MMM yyyy</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <string name="no_future_date">No Future Date Allowed</string>

    <string name="search">Search Customers</string>
    <string name="customersearch">Search Customers</string>
    <string name="select_customers">Select Customers</string>
    <string name="category1">Category1</string>
    <string name="questions1">Question1 -  What is lorem spum ?</string>
    <string name="questionairecategory">Questionaire Category</string>
    <string name="select_status">Choose Status</string>
    <string name="choose_date">SelectDate</string>
    <string name="designation">Designation</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="emailphone">Email/Phone</string>
    <string name="oldPassword">OldPassword</string>
    <string name="newpassword">Enter New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="reenterPassword">Confirm Your Password</string>
    <string name="mobile">Phone Number</string>
    <string name="role">Role</string>
    <string name="ldb">L.O.B</string>
    <string name="territory">Territory</string>
    <string name="getotp">Get OTp</string>
    <string name="otp">Enter The Otp</string>
    <string name="hint_search">Search Questions</string>
    <string name="allow_permission">Please allow permission to use the app</string>
    <string name="msg_enter_email">Please enter email</string>
    <string name="msg_email_error">Invalid email</string>
    <string name="msg_enter_pass1">Please enter password</string>
    <string name="msg_enter_pass2">Please enter new password</string>
    <string name="msg_pass_error">Password too short</string>
    <string name="msg_pass_match">Passwords don\'t match</string>
    <string name="msg_disconnected">Check internet connection</string>
    <string name="dialog_image_title">Select From</string>
    <string name="dialog_image_camera">Camera</string>
    <string name="dialog_image_gallery">Gallery</string>
    <string name="category2">Category2</string>
    <string name="category3">Category3</string>
    <string name="category4">Category4</string>
    <string name="loading_survey">Loading Survey…</string>
    <string name="loading_client">Loading Client…</string>
    <string name="loading_customer">Loading Customer…</string>
    <string name="loading_category">Loading Category…</string>
    <string name="loading_question">Loading Questions…</string>
    <string name="submittingAnswers">Submitting...</string>
    <string name="syncing_data">Syncing Data</string>
    <string name="no_network">No Network Available</string>
    <string name="last_sync_date">Last Sync Date</string>
    <string name="no_data_to_sync">No offline Data Available for Sync</string>
    <string name="settings">Sync Reponses</string>
    <string name="sync_data_to_server">Sync Data to Server</string>
    <string name="no_network_error">No Netwotk Error</string>
    <string name="sync_completed">Sync Completed</string>
    <string name="sync_responses">Sync Responses</string>
    <string name="work_flows">Workflows</string>
    <string name="_pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="_completed">Completed</string>
    <string name="verifier">Verified</string>
    <string name="teamSurvey">Team Survey Detail</string>
    <string name="teamSurveyReport">Team Survey Report</string>
    <string name="hintTeam">Team</string>

    <string name="select_survey">Select Survey</string>
    <string name="select_client">Select Client</string>
    <string name="no_data">No Data Available</string>
    <string name="in_progress">In progress</string>
    <string name="rejected">Rejected</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>

    <string name="select_category">Select Category</string>

    <string name="team_survey_detail">Team Survey Detail Report</string>
    <string name="team_survey_report">Team Survey Report</string>
    <string name="crystaldoctors">Crystal Doctor 1</string>
    <string name="amtala">Amtala</string>
    <string name="rmName">rmnamer</string>
    <string name="totalNumber">10</string>
    <string name="search_location">Search Location</string>
    <string name="searchQuestions">Search Questions</string>
    <string name="setLocation">Set Location</string>
    <string name="retailersName">RetailersName</string>
    <string name="address">Address</string>
    <string name="discontinue">Discontinue</string>
    <string name="distributorName">Distributor Name(Crystal Primary Customer)</string>
    <string name="totalSales">Total Sales</string>
    <string name="focusvillage">Focus Village</string>
    <string name="addNewReatiors">Add New Retailers</string>
    <string name="err_msg_name">Please Enter Retailer Name</string>
    <string name="err_msg_address">Please Enter Address</string>
    <string name="err_msg_terroritry">Enter Your Territory</string>
    <string name="err_msg_distributor">Please Enter Your Distributor</string>
    <string name="err_msg_totalSales">Enter Total Sales</string>
    <string name="err_msg_focusVillage">Enter the Village Name</string>
    <string name="err_msg_phone">Please Enter The Phone Number</string>
    <string name="select_territory">Select Territory</string>
    <string name="majorCrop">Major Crop</string>
    <string name="err_msg_majorCrop">Enter The Major Crop</string>
    <string name="add_details">Add Details</string>
    <string name="companyName">Company Name</string>
    <string name="brandaname">Brand Name</string>
    <string name="selectbrands">Select Brands(removable only)</string>
    <string name="select_options">Select Options</string>
    <string name="option">Option values</string>
    <string name="todo">TODO</string>
    <string name="mypending">My Pending</string>
    <string name="submitnNew"><![CDATA[Submit & New]]></string>
    <string name="submitted">Submitted</string>

    <string name="me">Me</string>
    <string name="checker">Checker</string>
    <string name="verifierr">Verifier</string>

    <string name="location_updated">LocationUpdated</string>
    <string name="message">Please specify reason for reject</string>
    <string name="reason">Reason</string>

    <string-array name="filterItem">
        <item>@string/category1</item>
        <item>@string/category2</item>
        <item>@string/category3</item>
        <item>@string/category4</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="pincode">PinCode</string>
    <string name="retailersState">State</string>
    <string name="err_msg_pincode">Please Enter Pincode</string>
    <string name="err_msg_state">Please Enter State</string>
    <string name="state">Select State</string>
    <string name="please_select_valid_to_date">Please Choose Valid toDate</string>
    <string name="please_allow_the_permission_to_share_file">Please allow permission to download the report</string>
    <string name="file_downloading">File Downloading</string>
    <string name="select_app_to_share">Select app to share</string>
    <string name="error_file_downloading">Error File Downloading</string>
    <string name="sharetitle">Hello, \n \n Please find attachment of </string>
    <string name="thankyou">Thank You</string>
    <string name="cystal_text">Select CrystalCustomer</string>
    <string name="new_retailer_text">Select New Retailer or add new retailer</string>
    <string name="team">Team</string>
    <string-array name="team_survey_report">
        <item>S. No</item>
        <item>Name</item>
        <item>Targets</item>
        <item>Submitted</item>
        <item>Achievement</item>
        <item>In Progress</item>
        <item>New Retailer</item>
        <item>Crystal Customers</item>
    </string-array>

</resources>
