<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        app:cardBackgroundColor="@color/survey_background_color"
        app:cardCornerRadius="@dimen/margin_min">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewRetailersName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/retailersname"
                android:textColor="@color/textColorPrimaryDark"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/textViewMobileNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewRetailersName"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/mobile_no"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:text="@string/status"
                android:textAllCaps="true"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_normal" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>