<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_xnormal"
        android:paddingRight="@dimen/margin_xnormal"
        android:paddingTop="@dimen/margin_extra_large">

        <ImageView
            android:id="@+id/imageViewUniverseLogo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_extra_large"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_xnormal"
            android:src="@drawable/universe" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutRestPassord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewUniverseLogo"
            android:layout_marginTop="@dimen/margin_medium">

            <EditText
                android:id="@+id/input_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/oldPassword"
                android:inputType="text"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayoutRestPassord"
            android:layout_marginBottom="@dimen/margin_medium">

            <EditText
                android:id="@+id/input_reset_newpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newpassword"
                android:inputType="text"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayoutNewPassword"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_medium">

            <EditText
                android:id="@+id/input_reset_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reenterPassword"
                android:inputType="text"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_submit_reset_password"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_below="@+id/relativeLayout"
        android:layout_margin="@dimen/margin_xnormal"
        android:alpha="0.8"
        android:background="@color/app_theme_color"
        android:padding="@dimen/margin_xmedium"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

</RelativeLayout>